--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
         <version>2.0.3.RELEASE</version>
     </parent>
 
+    <modules>
+        <module>customer-service</module>
+        <module>order-service</module>
+        <module>discovery-service</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
